[tool.poetry]
name = "foocat_rap"
version = "0.1.0"
description = "Python package that eases the Python package that eases the pain concatenating Pandas categoricals!"
authors = ["Robert Pimentel <robilizando@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
